--- a/docs/src/main/asciidoc/stylesheet/config.css
+++ b/docs/src/main/asciidoc/stylesheet/config.css
@@ -108,6 +108,7 @@ table.configuration-reference.tableblock td.tableblock > .content > :last-child 
 }
 
 input#config-search-0 {
+  -webkit-appearance: none;
   display: block;
   width: 100%;
   margin-top: 10px;
@@ -115,7 +116,7 @@ input#config-search-0 {
   transition: transform 250ms ease-in-out;
   font-size: 14px;
   line-height: 18px;
-  color: #4695eb;
+  color: color(#4695eb a(0.8));
   background-color: transparent;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath stroke='white' fill='white' d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -125,10 +126,6 @@ input#config-search-0 {
   transition: all 250ms ease-in-out;
   backface-visibility: hidden;
   transform-style: preserve-3d;
-}
-
-input#config-search-0 {
-  color: color(#4695eb a(0.8));
   letter-spacing: 1.5px;
 }
 
